# ssr-rs

./: Cargo.toml  README.md  config.json
src/: main.rs
templates/: a.html  index.html
templates/common/: header.html
templates/home/: a.html
