[package]
name = "server-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros"] }
salvo = {version="0.37.9", features=["serve-static"]}
tera = "1.18.1"
path-absolutize = "3.0.14"
serde_json = "1.0.95"